# HomeSchoolWebsite

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  INTERACTION_TEST_REPORT.md  QoL_Review_Report.md  fly.staging.toml  fly.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml  wake-reminders.yml
backend/: Cargo.toml
backend/src/: auth.rs  backup.rs  db.rs  email.rs  errors.rs  features.rs  main.rs  models.rs  push.rs  rate_limit.rs  reminders.rs  sanitize.rs  session_store.rs  storage.rs
backend/src/routes/: admin.rs  auth.rs  blog.rs  calendar.rs  children.rs  class_groups.rs  documents.rs  families.rs  files.rs  lesson_plans.rs  member.rs  messages.rs  mod.rs  notifications.rs  payments.rs  public.rs  push.rs  reports.rs  sessions.rs  standards.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  custom-sw.ts  features.tsx  index.css  main.tsx
frontend/src/components/: AddressLink.tsx  Calendar.tsx  DocumentSigner.tsx  ErrorBoundary.tsx  ExcalidrawExtension.tsx  FeatureGate.tsx  FieldEditor.tsx  FilePreview.tsx  InstallPrompt.tsx  Layout.tsx  Lightbox.tsx  Pagination.tsx  PushPrompt.tsx  RichImage.tsx  RichTextDisplay.tsx  RichTextEditor.tsx  RoleGuard.tsx  SignaturePad.tsx  Toast.tsx
frontend/src/pages/admin/: AdminDashboard.tsx  BulkSessions.tsx  EmailParents.tsx  ManageAnnouncements.tsx  ManageClassGroups.tsx  ManageDocuments.tsx  ManageFeatures.tsx  ManageFiles.tsx  ManagePayments.tsx  ManageResources.tsx  ManageSchedule.tsx  ManageSessionTypes.tsx  ManageSessions.tsx  ManageSiteContent.tsx  ManageStandards.tsx  ManageStudents.tsx  ManageUsers.tsx  Reports.tsx
frontend/src/pages/auth/: ForgotPassword.tsx  Login.tsx  Register.tsx  ResetPassword.tsx
frontend/src/pages/member/: AccountSettings.tsx  BlogPost.tsx  ClassDetail.tsx  ClassSessions.tsx  ConversationDetail.tsx  CreateLessonPlan.tsx  CreatePost.tsx  Dashboard.tsx  DraftPosts.tsx  EditLessonPlan.tsx  EditPost.tsx  Inbox.tsx  LessonPlanDetail.tsx  LessonPlans.tsx  Members.tsx  MyChildren.tsx  MyClasses.tsx  MyDocuments.tsx  MyPayments.tsx  MyRsvps.tsx  Notifications.tsx  PostPreview.tsx  ReportCard.tsx  (+3 more)
frontend/src/utils/: postCategories.ts
(+5 files in other folders)
