[package]
name = "preschool-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
argon2 = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower-sessions = "0.14"
# tower-sessions-memory-store removed — using SQLite-backed sessions
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
async-trait = "0.1"
ammonia = "3"
tokio-util = { version = "0.7", features = ["io"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
time = "0.3"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
web-push = { version = "0.10", optional = true, features = ["hyper-client"] }
chrono-tz = "0.10.4"
urlencoding = "2.1.3"

[features]
default = []
push-notifications = ["web-push"]
